# Haskell-Decimal

./: .gitignore  Decimal.cabal  README.md  changelog.md  stack.yaml
Decimal/: Decimal.cabal  LICENSE.txt  README.txt
Decimal/src/Data/: Decimal.hs
Decimal/tests/: Main.hs
src/Data/: Decimal.hs
src/Decimal/: .gitignore  Decimal.cabal  README.txt
src/Decimal/src/Data/: Decimal.hs
src/Decimal/tests/: Main.hs
tests/: Main.hs
