Name:                Decimal
Version:             0.2.2
License:             BSD3
License-file:        LICENSE.txt
Copyright:           Paul Johnson, 2011
Author:              Paul Johnson
Maintainer:          paul@cogito.org.uk
Stability:           beta
Category:            Math
Cabal-version:       >=1.10
Build-type:          Simple
Synopsis:            Decimal numbers with variable precision
Description:         A decimal number has an integer mantissa and a negative
                    exponent.  The exponent can be interpreted as the number
                    of decimal places in the value.
Extra-source-files:  README.txt
tested-with:         GHC==7.0.4

library 
  build-depends:    
                    base >= 4 && < 5,
                    QuickCheck >= 2.4
  hs-source-dirs:   src
  if impl(ghc >= 7.0.0)
     default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Data.Decimal

test-suite Main
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4 && < 5,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  src, src/Data, tests
  -- The following lines trigger a bug in Hackage.  Uncommment for compilation on GHC 6.
  -- if impl(ghc >= 7.0.0)
  --      default-language: Haskell2010
  default-language: Haskell2010
  main-is:         Main.hs

